--- a/index.html
+++ b/index.html
@@ -1148,7 +1148,7 @@ Implementation of the software quality sector in the company.
 
           <h3 class="h3 form-title">Contact Form</h3>
 
-          <form action="\enviar.php" method="get" class="form" data-form >
+          <form action="\enviar.php" method="post" class="form" data-form >
 
             <div class="input-wrapper">
               <input type="text" name="fullname" id="nome" class="form-input" placeholder="Full name" required data-form-input>
