--- a/index.html
+++ b/index.html
@@ -1148,7 +1148,7 @@ Implementation of the software quality sector in the company.
 
           <h3 class="h3 form-title">Contact Form</h3>
 
-          <form id="formulario" method="get">
+          <form id="formulario" method="post">
 
             <div class="input-wrapper">
               <input type="text" name="fullname" id="nome" class="form-input" placeholder="Full name" required data-form-input>
