--- a/index.html
+++ b/index.html
@@ -1147,8 +1147,8 @@ Implementation of the software quality sector in the company.
         <section class="contact-form">
 
           <h3 class="h3 form-title">Contact Form</h3>
-
-          <form id="formulario" method="post">
+        
+          <form id="formulario" action="\enviar.rb" method="post" >
 
             <div class="input-wrapper">
               <input type="text" name="fullname" id="nome" class="form-input" placeholder="Full name" required data-form-input>
@@ -1160,8 +1160,7 @@ Implementation of the software quality sector in the company.
 
             <button class="form-btn" id="enviar" type="submit" data-form-btn>
               <ion-icon name="paper-plane"></ion-icon>
-              <span>Send Message</span>
-              <script src="https://cdn.emailjs.com/sdk/2.0.0/emailjs.min.js"></script>
+              <span>Enviar</span> 
             </button>
 
           </form>
