--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:matheus.p.lemes@outlook.com" class="contact-link">matheus.p.lemes@outlook.com</a>
+              <a href="mailto:contato@matheusqa.eu" class="contact-link">contato@matheusqa.eu</a>
             </div>
 
           </li>
